// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordResetConfirm comprehensive snapshots > full password reset confirm - полный snapshot 1`] = `
{
  "clientContext": {
    "appVersion": "2.1.0",
    "deviceId": "device-full-789",
    "geo": {
      "lat": 52.52,
      "lng": 13.405,
    },
    "ip": "10.0.0.1",
    "locale": "ru-RU",
    "sessionId": "session-full-xyz",
    "timezone": "Europe/Moscow",
    "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 17_0 like Mac OS X)",
  },
  "dtoVersion": "1.1",
  "newPassword": "new-secure-password-full-456",
  "redirectUrl": "https://example.com/success-full",
  "token": "reset-token-full-456",
}
`;

exports[`PasswordResetConfirm comprehensive snapshots > minimal password reset confirm - полный snapshot 1`] = `
{
  "newPassword": "new-password-123",
  "token": "reset-token-123",
}
`;

exports[`PasswordResetConfirm comprehensive snapshots > password reset confirm with clientContext only - полный snapshot 1`] = `
{
  "clientContext": {
    "appVersion": "1.0.3",
    "deviceId": "device-123",
    "geo": {
      "lat": 55.7558,
      "lng": 37.6173,
    },
    "ip": "192.168.1.1",
    "locale": "en-US",
    "sessionId": "session-abc",
    "timezone": "UTC",
    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)",
  },
  "newPassword": "new-password-123",
  "token": "reset-token-123",
}
`;

exports[`PasswordResetConfirm comprehensive snapshots > password reset confirm with redirectUrl only - полный snapshot 1`] = `
{
  "newPassword": "new-password-123",
  "redirectUrl": "https://example.com/success",
  "token": "reset-token-123",
}
`;
